--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9293,7 +9293,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190603121506056" list="magic [[Origine de l'univers - Etienne Klein]] Home" modified="20190606110545185" title="$:/StoryList">
+<div created="20190611104352734" list="Torrent magic [[Books / livres]] Home" modified="20190611143614026" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9353,8 +9353,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190605135843490" title="$:/temp/search">
-<pre>magic</pre>
+<div created="20190114084246125" modified="20190611143611881" title="$:/temp/search">
+<pre>down</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9527,8 +9527,12 @@ Pour lui, nier une partie de l'électorat, si celui-ci ne correspond pas à ses 
 Peu après, il fait un parallèle avec les Gilets jaunes : «Il faut que ces gens-là sachent qu’ils se mettent au ban de la République. Même s’ils sont nombreux.»
 Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». Ainsi, il juge que le Grand débat en France est une bonne chose, «surtout lorsqu’on le fait comme l’a fait Macron». Soutien public d'Emmanuel Macron, BHL le considère d'avoir été «extrêmement courageux» en prenant cette initiative.</pre>
 </div>
-<div created="20190131165226977" modified="20190605123141171" tags="epub download" title="Books / livres">
-<pre>! Mélenchon
+<div created="20190131165226977" modified="20190611141914747" tags="epub download" title="Books / livres">
+<pre>! JM Corda
+* ''Utoya - Laurent Obertone''
+* ''Dotcom Secrets - Russell Brunson''
+* ''Petit traité de manipulation à l'usage des honnêtes gens - Robert-Vincent Joule et Jean-Léon Beauvois''
+! Mélenchon
 * socialisme scientifique socialisme utopique
 * le vieil homme et la mer
 * joan saer - l'ancetre
@@ -11335,13 +11339,18 @@ Pierre Kropotkine
 
 </pre>
 </div>
-<div created="20190424130007767" modified="20190605125736353" tags="todo torrent download" title="Torrent">
+<div created="20190424130007767" modified="20190612102225632" tags="todo torrent download" title="Torrent">
 <pre>! Misc
 * Erasemybackpain / Back to Life : https://www.erasemybackpain.com/ https://www.youtube.com/watch?v=Fr2dGwCfNaY
 * JM Corda / Sexworkout : https://www.jmcorda.com/fr/  sextao
 * http://www.dm360inc.com/samples/ilv.pdf 
 
 ! Magic
+* ''NOWHERE by Tri Ryuzaki''
+* ''ReTURNtion by Moritz Mueller''
+* ''Cultural Xchange Shoot Ogawa Apollo Robins''
+* ''How To Do Coin Magic by Zee''
+* ~~Evanesce by Eric Jones~~
 * ''Ultimate Magician Collection''
 * epub Sharps and Flats, subtitled A Complete Revelation of the Secrets of Cheating at Games of Chance and Skill
 * Eric Chien
@@ -11349,8 +11358,6 @@ Pierre Kropotkine
 * Shin Lim (The Switch / 52 Shades of Red)
 * Goshman Spellbound
 * ''Sylvester Pitch - Dan Sylvester's Inertia Pass Encyclopedia''
-* ''NOWHERE by Tri Ryuzaki''
-* ''ReTURNtion by Moritz Mueller''
 * Horizon by Ryan Bliss
 * ''Jay Noblezada - In the Beginning There Were Coins''
 * ''Eric Jones - Metal''
