--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9293,7 +9293,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190611104352734" list="Torrent magic [[Books / livres]] Home" modified="20190611143614026" title="$:/StoryList">
+<div list="Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
