--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -199,6 +199,8 @@ Error message and password prompt
 
 <li>$:/view</li>
 
+<li>3 Techniques Pour Se Connecter Avec N'importe Qui</li>
+
 <li>Alain Damasio @thinkerview</li>
 
 <li>aliens, ovnis</li>
@@ -206,6 +208,8 @@ Error message and password prompt
 <li>Bayes</li>
 
 <li>BHL - Bernard-Henri Lévy</li>
+
+<li>blacklist pro</li>
 
 <li>Books / livres</li>
 
@@ -234,6 +238,10 @@ Error message and password prompt
 <li>dev ideas</li>
 
 <li>dev resources</li>
+
+<li>douches froides</li>
+
+<li>Draft of 'Books / livres'</li>
 
 <li>Eco &amp; Responsable</li>
 
@@ -9293,7 +9301,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="Home" title="$:/StoryList">
+<div created="20190620123417332" list="Home" modified="20190620123417332" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9353,8 +9361,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190611143611881" title="$:/temp/search">
-<pre>down</pre>
+<div created="20190114084246125" modified="20190620123415853" title="$:/temp/search">
+<pre>passw</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9483,6 +9491,14 @@ Error message and password prompt
 <div created="20190108084902699" modified="20190108084918227" title="$:/view">
 <pre>classic</pre>
 </div>
+<div created="20190619121613746" modified="20190619121716705" tags="fiche_lecture relationnel" title="3 Techniques Pour Se Connecter Avec N'importe Qui">
+<pre>! https://www.youtube.com/watch?v=4SC_61XecoA
+* feel good / mettre à l'aise
+* honnête / sincérité
+* complimenter sur un domaine où la personne fait des efforts
+* comportement sur mesure
+* trouver les dénominateurs communs</pre>
+</div>
 <div created="20190418151400697" modified="20190419094345620" tags="fiche_lecture thinkerview" title="Alain Damasio @thinkerview">
 <pre>! Michel Foucault, les 3 grands régimes de pouvoir :	
 * régime féodal
@@ -9527,11 +9543,22 @@ Pour lui, nier une partie de l'électorat, si celui-ci ne correspond pas à ses 
 Peu après, il fait un parallèle avec les Gilets jaunes : «Il faut que ces gens-là sachent qu’ils se mettent au ban de la République. Même s’ils sont nombreux.»
 Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». Ainsi, il juge que le Grand débat en France est une bonne chose, «surtout lorsqu’on le fait comme l’a fait Macron». Soutien public d'Emmanuel Macron, BHL le considère d'avoir été «extrêmement courageux» en prenant cette initiative.</pre>
 </div>
-<div created="20190131165226977" modified="20190611141914747" tags="epub download" title="Books / livres">
+<div created="20190618094512983" modified="20190618095230670" tags="" title="blacklist pro">
+<pre>* Nadia Riva
+* ~Guillaume Tanguille
+* Stéphanie Bui - commerciale Créative &quot;Stéphanie cherche à savoir des trucs sur moi etc auprès d'anciens collègues, plutôt [pour] savoir si je suis dans le rang ou non&quot;
+* Jean-Samuel Pallard
+</pre>
+</div>
+<div created="20190131165226977" modified="20190617151443555" tags="epub download" title="Books / livres">
 <pre>! JM Corda
 * ''Utoya - Laurent Obertone''
 * ''Dotcom Secrets - Russell Brunson''
 * ''Petit traité de manipulation à l'usage des honnêtes gens - Robert-Vincent Joule et Jean-Léon Beauvois''
+! Jean Ziegler
+* Jean Ziegler - Le Capitalisme expliqué à ma petite-fille (en espérant qu'elle en verra la fin)
+* Victor Hugo - Les misérables
+* Les discours collectés de Jean Jaurès
 ! Mélenchon
 * socialisme scientifique socialisme utopique
 * le vieil homme et la mer
@@ -9732,10 +9759,18 @@ You must not project that you are proving anything or the actions, no matter how
 * 9 : Tu iras tjs jusqu'au bout
 * 10 : Tu jubileras de tout</pre>
 </div>
-<div created="20190327143035149" modified="20190426131555770" tags="magic coinmagic" title="coin magic">
+<div created="20190327143035149" modified="20190618143143455" tags="magic coinmagic" title="coin magic">
 <pre>* ''@1'26 -&gt; @1'29 https://www.youtube.com/watch?v=ZQSnMsbcLhI''
 * https://www.youtube.com/watch?v=W1sAkptXwf4
 * https://geniimagazine.com/wiki/index.php?title=Coin_Concealments
+
+! Gaffed coins
+* Kreis Magnetic US Half Dollar super strong (The Silver Edge by Kim Andersen) 
+# http://kreis-magic.com/product/coin/
+# https://www.approachchina.com/magnetic-us-half-dollar-super-strong-p-2421.html?zenid=vpma24jla5me49sji9td2na0i5
+# https://www.ellusionist.com/silver-edge.html 
+# http://www.penguinmagic.com/p/3852
+
 
 ! à trouver
 * Goshman Spellbound
@@ -10079,6 +10114,18 @@ https://github.com/remouk
 
 ! SQL
 SELECT * FROM v$version;</pre>
+</div>
+<div created="20190619121720593" modified="20190619121755787" tags="fiche_lecture santé" title="douches froides">
+<pre>* système immunitaire ++
+* - de stress
+* circulation sanguine ++
+* santé de la peau
+* brûle des calories
+* travaille la discipline / détermination
+* donne du peps</pre>
+</div>
+<div modified="20190617151443806" title="Draft of 'Books / livres'">
+<pre></pre>
 </div>
 <div created="20190206142851225" modified="20190329085031028" tags="eco" title="Eco &amp; Responsable">
 <pre>! Made In France
@@ -10603,7 +10650,7 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 * http://adrastia.org/
 * https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos</pre>
 </div>
-<div created="20190322143324937" modified="20190605135941438" tags="magic current" title="magic">
+<div created="20190322143324937" modified="20190618143005470" tags="magic current" title="magic">
 <pre>disposable email : https://www.throwawaymail.com/en narorerefr@mywrld.top
 
 patreon PigCake : https://www.patreon.com/bePatron?c=714470&amp;rid=1318017
@@ -10621,9 +10668,14 @@ patreon PigCake : https://www.patreon.com/bePatron?c=714470&amp;rid=1318017
 * sankey retention vanish : https://www.youtube.com/watch?v=FhgF0uM04q4
 * sankey squeeze : @4'50 - 5'28 https://www.youtube.com/watch?v=gmo5aJNBFEM
 
-! ressources
+! warez
 * ''http://www.magic22.com/''
 * ''http://freemagicdownload1807.blogspot.com/''
+* https://www.dailymotion.com/j1811178/videos?sort=visited
+* http://magic-tricks.ru/alltricks/
+* DarkHAK Fr  https://www.youtube.com/channel/UCHps7VPmYRBBbvkLLAkv41w
+
+! ressources
 * https://www.reddit.com/r/Magic/wiki/index#wiki_coins
 * https://www.reddit.com/r/Magic/comments/5wci5y/to_get_a_new_trick_find_an_old_book/
 * https://www.reddit.com/r/Magic/comments/5wv2j0/legit_sources_for_free_magic/
@@ -10881,9 +10933,10 @@ le fondement logiquement premier de tout ce qui existe - ce peut être particuli
 * http://hexaco.org/questionnaire_quiz
 </pre>
 </div>
-<div created="20190130144059269" modified="20190522094633422" tags="pw" title="pw">
+<div created="20190130144059269" modified="20190618101801207" tags="pw" title="pw">
 <pre>```
 youtube =&gt; osef@grr.la	5/19    cf https://www.guerrillamail.com/fr/inbox?mail_id=476361683
+aliexpress =&gt; ali.s.lx.n 6/19
 impots.gouv.fr =&gt; 1200125072181 / i 5/17
 moncompteactivite.gouv.fr =&gt; 184014410977526 M12/18    cf https://intra.ausy.fr/publish/universite/Guide%20d'utilisation%20Consultant.pdf
 gog.com =&gt; 3/17 gog13.o.osef@xoxy.net (aussi 12/18 gog.leno.osef@xoxy.net  mais inutile)
@@ -11339,7 +11392,7 @@ Pierre Kropotkine
 
 </pre>
 </div>
-<div created="20190424130007767" modified="20190612102225632" tags="todo torrent download" title="Torrent">
+<div created="20190424130007767" modified="20190618122024133" tags="todo torrent download" title="Torrent">
 <pre>! Misc
 * Erasemybackpain / Back to Life : https://www.erasemybackpain.com/ https://www.youtube.com/watch?v=Fr2dGwCfNaY
 * JM Corda / Sexworkout : https://www.jmcorda.com/fr/  sextao
@@ -11350,6 +11403,8 @@ Pierre Kropotkine
 * ''ReTURNtion by Moritz Mueller''
 * ''Cultural Xchange Shoot Ogawa Apollo Robins''
 * ''How To Do Coin Magic by Zee''
+* The Silver Edge - Kim Andersen ellusionist (using Kreis Magnetic US Half Dollar)
+* Fucking coin de Clément Kerstenne et Philippe Bougart
 * ~~Evanesce by Eric Jones~~
 * ''Ultimate Magician Collection''
 * epub Sharps and Flats, subtitled A Complete Revelation of the Secrets of Cheating at Games of Chance and Skill
@@ -11360,7 +11415,7 @@ Pierre Kropotkine
 * ''Sylvester Pitch - Dan Sylvester's Inertia Pass Encyclopedia''
 * Horizon by Ryan Bliss
 * ''Jay Noblezada - In the Beginning There Were Coins''
-* ''Eric Jones - Metal''
+* ~~''Eric Jones - Metal''~~
 *  Al Schneider Magic (book)
 * volume 1 of David Roth's Expert Coin Magic Made Easy
 * ''Jay Sankey 'revolutionary coin magic'''
