--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -201,6 +201,8 @@ Error message and password prompt
 
 <li>3 Techniques Pour Se Connecter Avec N'importe Qui</li>
 
+<li>8 formes d'intelligence</li>
+
 <li>Alain Damasio @thinkerview</li>
 
 <li>aliens, ovnis</li>
@@ -212,6 +214,8 @@ Error message and password prompt
 <li>blacklist pro</li>
 
 <li>Books / livres</li>
+
+<li>Buddha lessons</li>
 
 <li>cadeaux</li>
 
@@ -323,6 +327,8 @@ Error message and password prompt
 
 <li>Philogynes BIG5</li>
 
+<li>PigCake recommandations</li>
+
 <li>pw</li>
 
 <li>Python</li>
@@ -344,6 +350,8 @@ Error message and password prompt
 <li>shuttle pass / flying shuttle pass</li>
 
 <li>Signes de reconnaissance entre initiés</li>
+
+<li>Stoicism - stoïcisme</li>
 
 <li>Sx</li>
 
@@ -9301,7 +9309,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190620123417332" list="Home" modified="20190620123417332" title="$:/StoryList">
+<div created="20190704122513409" list="[[Stoicism - stoïcisme]] Home" modified="20190705123953245" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9361,8 +9369,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190620123415853" title="$:/temp/search">
-<pre>passw</pre>
+<div created="20190114084246125" modified="20190705134446565" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9499,6 +9507,17 @@ Error message and password prompt
 * comportement sur mesure
 * trouver les dénominateurs communs</pre>
 </div>
+<div created="20190627091954693" modified="20190627092024097" tags="fiche_lecture" title="8 formes d'intelligence">
+<pre>! Howard Gardner
+* linguistique
+* logique
+* spatiale
+* introspective (self-controle, self-knowledge...)
+* sociale
+* corporelle
+* musicale
+* spirituelle</pre>
+</div>
 <div created="20190418151400697" modified="20190419094345620" tags="fiche_lecture thinkerview" title="Alain Damasio @thinkerview">
 <pre>! Michel Foucault, les 3 grands régimes de pouvoir :	
 * régime féodal
@@ -9550,7 +9569,7 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Jean-Samuel Pallard
 </pre>
 </div>
-<div created="20190131165226977" modified="20190617151443555" tags="epub download" title="Books / livres">
+<div created="20190131165226977" modified="20190627145037343" tags="epub download" title="Books / livres">
 <pre>! JM Corda
 * ''Utoya - Laurent Obertone''
 * ''Dotcom Secrets - Russell Brunson''
@@ -9587,7 +9606,11 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Orwell
 * Dostoivski
 * Pier Paolo Pasolini
+! Bascar / Hypno machie:
+* François Roddier - thermodynamique de l'évolution
+* René Girard - Les origines de la culture
 ! misc:
+* Krishnamurti - Le Cœur des enseignements (1980)
 * ''James Gleick - The Information: A History, a Theory, a Flood''
 * Jiddu Krishnamurti - De l'éducation
 * ''L'Entraide - Pierre Kropotkine''
@@ -9685,6 +9708,14 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * ''Nicolas Guéguen - Psychologie de la soumission et de la manipulation''
 
 </pre>
+</div>
+<div created="20190628132124703" modified="20190628132202842" tags="fiche_lecture" title="Buddha lessons">
+<pre>! Buddha lessons
+* don't worry : worry is useless
+* embrace change : everything changes
+* accept situations you cannot change
+* compassion
+* live in present : je n'ai pas besoin de FAIRE pour ETRE, mais quand je SUIS je FAIS</pre>
 </div>
 <div created="20190520152355422" modified="20190520152534715" tags="cadeaux" title="cadeaux">
 <pre>! Alix
@@ -10083,7 +10114,7 @@ https://github.com/remouk
 ```
 </pre>
 </div>
-<div created="20190108133939395" modified="20190405091011455" tags="dev" title="dev resources">
+<div created="20190108133939395" modified="20190704122526215" tags="dev" title="dev resources">
 <pre>! YAML
 * https://symfony.com/legacy/doc/reference/1_3/fr/02-yaml
 * https://fr.wikipedia.org/wiki/YAML
@@ -10113,7 +10144,10 @@ https://github.com/remouk
 * http://hackingdistributed.com/2017/08/13/cost-of-decent/
 
 ! SQL
-SELECT * FROM v$version;</pre>
+SELECT * FROM v$version;
+
+! PHP
+* https://eilgin.github.io/php-the-right-way/</pre>
 </div>
 <div created="20190619121720593" modified="20190619121755787" tags="fiche_lecture santé" title="douches froides">
 <pre>* système immunitaire ++
@@ -10365,7 +10399,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20190606083914555" tags="home current" title="Home">
+<div created="20190108105358377" modified="20190704122425340" tags="home current" title="Home">
 <pre>cute https://twitter.com/i_iove_nature
 
 
@@ -10378,6 +10412,7 @@ https://www.trendmicro.com/vinfo/fr/threat-encyclopedia/malware/TrojanSpy.JS.COI
 
 ! current
 * ''https://tgdmb.com/'' The Gaming Den - Frank Trollman
+* https://en.wikipedia.org/wiki/Zip_bomb &amp; https://en.wikipedia.org/wiki/Quine_(computing)
 * http://www.ponpokopon.net/cours.html cours japonais
 * http://jeanzin.fr/2011/05/12/la-vie-increee/
 * http://jeanzin.fr/ecorevo/sciences/temps.htm
@@ -10650,7 +10685,7 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 * http://adrastia.org/
 * https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos</pre>
 </div>
-<div created="20190322143324937" modified="20190618143005470" tags="magic current" title="magic">
+<div created="20190322143324937" modified="20190704144424102" tags="magic current" title="magic">
 <pre>disposable email : https://www.throwawaymail.com/en narorerefr@mywrld.top
 
 patreon PigCake : https://www.patreon.com/bePatron?c=714470&amp;rid=1318017
@@ -10674,6 +10709,7 @@ patreon PigCake : https://www.patreon.com/bePatron?c=714470&amp;rid=1318017
 * https://www.dailymotion.com/j1811178/videos?sort=visited
 * http://magic-tricks.ru/alltricks/
 * DarkHAK Fr  https://www.youtube.com/channel/UCHps7VPmYRBBbvkLLAkv41w
+* Magic Christian : https://www.dailymotion.com/magic-christian/videos
 
 ! ressources
 * https://www.reddit.com/r/Magic/wiki/index#wiki_coins
@@ -10933,6 +10969,50 @@ le fondement logiquement premier de tout ce qui existe - ce peut être particuli
 * http://hexaco.org/questionnaire_quiz
 </pre>
 </div>
+<div created="20190703121551080" modified="20190703121743225" tags="download magic todo" title="PigCake recommandations">
+<pre>! DVDs:
+* Daryl's Encyclopedia of Card Sleights
+* Bill Malone On the Loose
+* Bill Malone Here I Go Again
+* Oz Pearlman Born to Perform
+* Tommy Wonder Visions Of Wonder
+* Malone Meets Marlo
+* Richard Osterlind Mind Mysteries
+* Jeff Sheridan Street Act
+* Michael Ammars Easy to Master Card Miracles
+* Richard Sanders Show
+* Jay Sankeys Greatest Hits
+* Jay Sankeys 22 Blows to the Head
+* Al Schneider Technique
+* Ed Marlo The Cardician and The Legend
+* Ray Kosby Impossible Card Magic/Close Up Magic
+* John Cornelius Creative Magic
+* Daniel Garcia Project
+* Greg Wilson Pyrotechnic Pasteboards
+
+! Books:
+* Magic For Dumbie David Pogue
+* Expert Card Technique Hugard and Braue
+* How to Cheat at Everything Simon Lovell
+* Practical Mental Magic Ted Annemanns
+* Annemann's Card Magic
+* How to Play in Traffic Penn and Teller
+* How to Play with your Food Penn and Teller
+* Tricks of the Mind Derren Brown
+* Confessions of a Conjuror Derren Brown
+* Absolute Magic Derren Brown
+* Mark Wilson's Complete Course
+* Mysterious Stranger David Blaine  
+* Klutz Guide to Magic (yes im serious)
+
+! Television Specials
+* Street Magic David Blaine 1996
+* Magic Man David Blaine 1998
+* Frozen in Time 2000
+* Magic of David Copperfield XIII Mystery of Orient Express
+* World's Greatest Magic 1-4
+* James Randi Secret of The Psychics</pre>
+</div>
 <div created="20190130144059269" modified="20190618101801207" tags="pw" title="pw">
 <pre>```
 youtube =&gt; osef@grr.la	5/19    cf https://www.guerrillamail.com/fr/inbox?mail_id=476361683
@@ -10983,7 +11063,7 @@ ausyce.fr (&quot;BetweenUs&quot;)	s.l@ycom	l*****m
 ```
 </pre>
 </div>
-<div created="20190212082532922" modified="20190218084048674" tags="dev" title="Python" type="">
+<div created="20190212082532922" modified="20190626125052793" tags="dev" title="Python" type="">
 <pre>* tuto : https://docs.python.org/3.6/tutorial/controlflow.html
 
 * quick &amp; dirty Python programs : https://sebsauvage.net/python/programs.html
@@ -10993,17 +11073,46 @@ ausyce.fr (&quot;BetweenUs&quot;)	s.l@ycom	l*****m
 * débuter Python en 2019 : https://bersace.cae.li/conseils-python-2019.html
 
 * IDE : VSCode : http://sametmax.com/je-fais-mon-coming-out/
-* different installers : https://stevedower.id.au/blog/why-so-many-python-installers/</pre>
+* different installers : https://stevedower.id.au/blog/why-so-many-python-installers/
+
+* packaging executable : https://gregoryszorc.com/blog/2019/06/24/building-standalone-python-applications-with-pyoxidizer/
+* virtualenv : http://sametmax.com/les-environnement-virtuels-python-virtualenv-et-virtualenvwrapper/</pre>
 </div>
-<div created="20190529145620246" modified="20190529151149744" tags="quotes" title="Quotes, citations">
+<div created="20190529145620246" modified="20190705124017930" tags="quotes" title="Quotes, citations">
 <pre>&lt;&lt;&lt;
-optimisme de la volonté, pessimisme de l'intelligence
+optimisme de la volonté, pessimisme de l'intelligence - Antonio Gramsci
 &lt;&lt;&lt;
 
 
 &lt;&lt;&lt;
 Agis en ton lieu, et pense avec le monde
 &lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Le débat est une activité stérile qui sert à divertir les foules - JM Corda
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+L'amour c'est le désir actif du bonheur d'autrui - JM Corda
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+You have power inside your mind, not outside events. Realize this and you will find strength. - Marc Aurèle
+&lt;&lt;&lt;
+
+&lt;&lt;&lt;
+Of existing things, God has placed some within our power, and others not within our power. Within our power he has placed the most important thing, that through which he himself is happy, the power to deal with impressions - Epictetus
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+L'anarchie c'est l'ordre moins le pouvoir - Proudon
+&lt;&lt;&lt;
+
+
 
 </pre>
 </div>
@@ -11172,6 +11281,67 @@ Le langage.
 &quot;Il pleut&quot; est une formule utilisée pour alerter un frère de l'arrivée d'un profane. S'il s'agit d'une intruse, on dira: &quot;Il neige&quot;. Un maçon a tendance, par habitude, ou pour se faire reconnaître, à utiliser un vocabulaire spécifique.
 
 Il dira qu'il &quot;planche&quot; sur un dossier plutôt qu'il y travaille. Il parlera volontiers d'un discours &quot;tranchant&quot; ou de la &quot;pierre angulaire&quot; d'un problème. Il peut glisser dans la conversation des mots très usités en Loge: acclamation, chaîne, équerre, illustre, midi, minuit... </pre>
+</div>
+<div created="20190705150955988" modified="20190705151527706" tags="fiche_lecture stoicism" title="Stoicism - stoïcisme">
+<pre>Adapted environment &gt; Discipline &gt; Motivation
+
+&lt;&lt;&lt;
+make the things that you should be doing easier than the things you shouldn't be doing
+&lt;&lt;&lt;
+path of least resistance : things take the easiest route
+
+
+! Journaling (=&gt; use evernote)
+* weeding : define pb / summurize it / ramble on it =&gt; solutions might emerge
+* reflect on day
+* plan tomorrow
+* note taking
+* questions &quot;the quality of your life is determined by the questions you ask yself&quot;
+	what will my pro life be in 5/10 years if i don't do/change anything ? is it ok for me ?
+
+! Things you havent complete control over
+* change
+* weather
+* traffic -&gt; practice patience
+* past
+* future
+* people's minds
+* people's emotions
+
+! Questions to ask yself
+* what are the things you want to do but struggle to do ?
+* what things do you avoid when they're in your calendar ?
+* what things do you really dislike doing ?
+* what things end up distracting you and taking you off-task ?
+* what things do you repeatibly do and feel guilty to do
+=&gt; find trends
+
+! Meditation
+meditate on skin between your nose : become aware of your thoughts, like an observer outside of your mind
+
+! problem solving steps : 
+# define problem
+# identify positive impacts of solving pb
+# identify negative impacts of not-solving pb
+# define research methodology
+# conduct research
+
+! Stoicism exercises : 
+* contemplation of the sage (what would [name of sage] do ?)
+* a view from above (3rd person view of yself) =&gt; dissiociate yself from emotions
+* physical exercise
+* meditation
+* reviewing your day (what went well ? what didn't ?) =&gt; congratulate yself, identify pbs/mistakes, track progress
+* journaling
+
+! stoic morning routine : 
+* expose yself to discomfort
+* visualize 
+* cold shower
+* journaling
+
+
+</pre>
 </div>
 <div created="20190108101014868" modified="20190108101155331" tags="sx" title="Sx">
 <pre>https://forum.sexworkout.net/t/comment-sont-representes-les-mouvements-de-baise-dans-notre-cerveau/468/1
