--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -227,6 +227,8 @@ Error message and password prompt
 
 <li>coin magic</li>
 
+<li>comment survivre à un mouvement de foule</li>
+
 <li>conférence Hip Hop</li>
 
 <li>Conscience &amp; temps &amp; spi</li>
@@ -9309,7 +9311,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190704122513409" list="[[Stoicism - stoïcisme]] Home" modified="20190705123953245" title="$:/StoryList">
+<div list="Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9928,6 +9930,16 @@ Three Pieces of Silver by Rune Klan (DVD) - unique and difficult coin effects th
 &lt;&lt;&lt;
 </pre>
 </div>
+<div created="20190712134339427" modified="20190712134705697" tags="fiche_lecture" title="comment survivre à un mouvement de foule">
+<pre># sortir - aller vers l'endroit où la densité diminue 
+# partir à temps (évaluer la densité : pas de contact / contact intempestifs inévitables / difficile de se toucher le visage tellement on est serrés)
+# rester debout (/!\ obstacles au sol)
+# économiser oxygène (ne pas crier)
+# replier les bras (en garde de boxeur)
+# se laisser porter par la vague (en gardant l'équilibre)
+# s'éloigner des murs/poteaux
+</pre>
+</div>
 <div created="20190514151801433" modified="20190514151929458" tags="fiche_lecture" title="conférence Hip Hop">
 <pre>* Bougalou Sam
 * puppet dance
@@ -10399,7 +10411,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20190704122425340" tags="home current" title="Home">
+<div created="20190108105358377" modified="20190712153520529" tags="home current" title="Home">
 <pre>cute https://twitter.com/i_iove_nature
 
 
@@ -10412,6 +10424,7 @@ https://www.trendmicro.com/vinfo/fr/threat-encyclopedia/malware/TrojanSpy.JS.COI
 
 ! current
 * ''https://tgdmb.com/'' The Gaming Den - Frank Trollman
+* ''HMM3 Horn of the Abyss '': http://www.jeuxvideo.com/forums/42-10531-55944943-1-0-1-0-heroes-of-might-magic-iii-mod-hd-horn-of-the-habyss-traduction.htm http://heroescommunity.com/viewthread.php3?TID=39830
 * https://en.wikipedia.org/wiki/Zip_bomb &amp; https://en.wikipedia.org/wiki/Quine_(computing)
 * http://www.ponpokopon.net/cours.html cours japonais
 * http://jeanzin.fr/2011/05/12/la-vie-increee/
