--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9311,7 +9311,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="Home" title="$:/StoryList">
+<div created="20190717133922722" list="Home" modified="20190718131934136" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9371,8 +9371,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190705134446565" title="$:/temp/search">
-<pre></pre>
+<div created="20190114084246125" modified="20190718131927816" title="$:/temp/search">
+<pre>downl</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9732,7 +9732,7 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 ! Alban
 * La Horde du Contrevent - Alain Damasio</pre>
 </div>
-<div created="20190329085105976" modified="20190524145655742" tags="cardmagic magic cardistry" title="card magic">
+<div created="20190329085105976" modified="20190718120910246" tags="cardmagic magic cardistry" title="card magic">
 <pre>* ''Spread Cull''
 * top change
 * double lift
@@ -9741,14 +9741,22 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Erdnase change
 * Straddle Pass
 
+! Mnemonica Stack 
+* = ordre fixe d'un deck, à apprendre par coeur, donnant l'impression d'un deck brassé
+* http://www.memorizedeck.com/stack.html
+* Rick Lax memory system
 
-* Mnemonica Stack = ordre fixe d'un deck, à apprendre par coeur, donnant l'impression d'un deck brassé		http://www.memorizedeck.com/stack.html / Rick Lax memory system
-
+! Torrents DL todo
 * torrent : Modern Flap Card by Hondo
 * torrent : Shin Lim (The Switch / 52 Sshades of Red)
 
+! research
 * Punch Deal = distribuer des cartes tactilement marquées 
-* Drawbridge Move</pre>
+* Drawbridge Move
+
+! Forces
+* peter turner psych force
+* Geraint Clarke's '2 of hearts' force </pre>
 </div>
 <div created="20190416132034938" modified="20190418152046748" tags="coinmagic magic" title="change over pass / hand washing">
 <pre>&lt;&lt;&lt;
@@ -10411,7 +10419,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20190712153520529" tags="home current" title="Home">
+<div created="20190108105358377" modified="20190715123328402" tags="home current" title="Home">
 <pre>cute https://twitter.com/i_iove_nature
 
 
@@ -10771,7 +10779,7 @@ patreon PigCake : https://www.patreon.com/bePatron?c=714470&amp;rid=1318017
 * I got this yesterday it will take a bit of practice with the handling but it look's very visual indeed. 
 </pre>
 </div>
-<div created="20190322150952918" modified="20190604132535456" tags="magic" title="magician advices / mistakes">
+<div created="20190322150952918" modified="20190717145540086" tags="magic" title="magician advices / mistakes">
 <pre>! Sankey : magician mistakes
 * talk too much
 * perform too quickly
@@ -10786,7 +10794,13 @@ patreon PigCake : https://www.patreon.com/bePatron?c=714470&amp;rid=1318017
 * ''perfection is impossible'', excellence is probable/achievable : lot of things you cannot control
 * ''practice is fun '': practice is rarely ever work
 * ''angles! '': be aware of camera/mirror, practice with camera
-* ''don't be affraid of failure '': failure = learning experience, it's part of the process</pre>
+* ''don't be affraid of failure '': failure = learning experience, it's part of the process
+
+! Thomas Garett
+* be an artist of the now
+* treat it as a gift
+* art is the lie that makes you realize the truth - Picasso
+</pre>
 </div>
 <div created="20190111131151776" modified="20190211103013615" tags="markups" title="Markups">
 <pre>! Media
@@ -11091,7 +11105,7 @@ ausyce.fr (&quot;BetweenUs&quot;)	s.l@ycom	l*****m
 * packaging executable : https://gregoryszorc.com/blog/2019/06/24/building-standalone-python-applications-with-pyoxidizer/
 * virtualenv : http://sametmax.com/les-environnement-virtuels-python-virtualenv-et-virtualenvwrapper/</pre>
 </div>
-<div created="20190529145620246" modified="20190705124017930" tags="quotes" title="Quotes, citations">
+<div created="20190529145620246" modified="20190718133125106" tags="quotes" title="Quotes, citations">
 <pre>&lt;&lt;&lt;
 optimisme de la volonté, pessimisme de l'intelligence - Antonio Gramsci
 &lt;&lt;&lt;
@@ -11099,16 +11113,6 @@ optimisme de la volonté, pessimisme de l'intelligence - Antonio Gramsci
 
 &lt;&lt;&lt;
 Agis en ton lieu, et pense avec le monde
-&lt;&lt;&lt;
-
-
-&lt;&lt;&lt;
-Le débat est une activité stérile qui sert à divertir les foules - JM Corda
-&lt;&lt;&lt;
-
-
-&lt;&lt;&lt;
-L'amour c'est le désir actif du bonheur d'autrui - JM Corda
 &lt;&lt;&lt;
 
 
@@ -11126,6 +11130,46 @@ L'anarchie c'est l'ordre moins le pouvoir - Proudon
 &lt;&lt;&lt;
 
 
+&lt;&lt;&lt;
+art is the lie that makes you realize the truth - Picasso
+&lt;&lt;&lt;
+
+! JM Corda
+&lt;&lt;&lt;
+Le débat est une activité stérile qui sert à divertir les foules - JM Corda
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+L'amour c'est le désir actif du bonheur d'autrui - JM Corda
+&lt;&lt;&lt;
+
+
+! Bruce Lee
+
+&lt;&lt;&lt;
+Don't get set into one form, adapt it and build your own, and let it grow, be like water. Empty your mind, be formless, shapeless — like water. Now you put water in a cup, it becomes the cup; You put water into a bottle it becomes the bottle; You put it in a teapot it becomes the teapot. Now water can flow or it can crash. Be water, my friend.
+&lt;&lt;&lt;
+
+&lt;&lt;&lt;
+A good martial artist does not become tense, but ready. Not thinking, yet not dreaming. Ready for whatever may come. When the opponent expands, I contract; and when he contracts, I expand. And when there is an opportunity, &quot;I&quot; do not hit, &quot;it&quot; hits all by itself. 
+&lt;&lt;&lt;
+
+&lt;&lt;&lt;
+Man, the living creature, the creating individual, is always more important than any established style or system.
+&lt;&lt;&lt;
+
+&lt;&lt;&lt;
+Use only that which works, and take it from any place you can find it.
+&lt;&lt;&lt;
+
+&lt;&lt;&lt;
+Forget about winning and losing; forget about pride and pain. Let your opponent graze your skin and you smash into his flesh; let him smash into your flesh and you fracture his bones; let him fracture your bones and you take his life. Do not be concerned with escaping safely — lay your life before him.
+&lt;&lt;&lt;
+
+&lt;&lt;&lt;
+There are no limits. There are plateaus, but you must not stay there, you must go beyond them. If it kills you, it kills you. A man must constantly exceed his level. 
+&lt;&lt;&lt;
 
 </pre>
 </div>
@@ -11575,11 +11619,29 @@ Pierre Kropotkine
 
 </pre>
 </div>
-<div created="20190424130007767" modified="20190618122024133" tags="todo torrent download" title="Torrent">
+<div created="20190424130007767" modified="20190718132006524" tags="todo torrent download" title="Torrent">
 <pre>! Misc
 * Erasemybackpain / Back to Life : https://www.erasemybackpain.com/ https://www.youtube.com/watch?v=Fr2dGwCfNaY
 * JM Corda / Sexworkout : https://www.jmcorda.com/fr/  sextao
 * http://www.dm360inc.com/samples/ilv.pdf 
+
+! Jeux
+* Worms Armageddon
+
+! Films
+* La Parole - film danois
+* Grave - FR 2017
+
+! Séries
+* Le Prince des Dragons
+* Gargoyles
+* X-Files
+* Code Lisa
+* Marshall &amp; Simon
+* Kung Fu The Legend Continues
+
+! Docu
+* 2017 The Patriot Daniel Sivan (docu sur Ulcan/Grégory Chelli)
 
 ! Magic
 * ''NOWHERE by Tri Ryuzaki''
@@ -11612,24 +11674,7 @@ Pierre Kropotkine
 * Extreme Burn 2.0
 * Currency ﻿de ﻿﻿Ninh﻿
 * Five de Xeon Steel
-* Bill ﻿Breaker de ﻿﻿﻿Bizzaro
-
-! Jeux
-* Worms Armageddon
-
-! Films
-* La Parole - film danois
-* Grave - FR 2017
-
-! Séries
-* Le Prince des Dragons
-* Gargoyles
-* X-Files
-* Code Lisa
-* Marshall &amp; Simon
-
-! Docu
-* 2017 The Patriot Daniel Sivan (docu sur Ulcan/Grégory Chelli)</pre>
+* Bill ﻿Breaker de ﻿﻿﻿Bizzaro</pre>
 </div>
 <div created="20190605105424593" modified="20190605105547784" tags="zététique vaccin" title="Vaccins : zéro d’enquête sur France 3">
 <pre>Vaccins : zéro d’enquête sur France 3
