--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -381,6 +381,8 @@ Error message and password prompt
 
 <li>The egg</li>
 
+<li>thoughts</li>
+
 <li>Todo</li>
 
 <li>Torrent</li>
@@ -9342,7 +9344,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190826091938714" list="Torrent Todo Home" modified="20190830154441590" title="$:/StoryList">
+<div created="20190906124533835" list="magic Home" modified="20190906132254891" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9361,7 +9363,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/slemoine/fond/personnel%20ou%20priv%C3%A9/tmp/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/slemoine/fond/personnel%20ou%20priv%C3%A9/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9381,7 +9383,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/slemoine/fond/personnel%20ou%20priv%C3%A9/tmp/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/slemoine/fond/personnel%20ou%20priv%C3%A9/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9402,8 +9404,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190830154424689" title="$:/temp/search">
-<pre>todo</pre>
+<div created="20190114084246125" modified="20190906132253401" title="$:/temp/search">
+<pre>magic</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9628,11 +9630,13 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Jean-Samuel Pallard
 </pre>
 </div>
-<div created="20190131165226977" modified="20190627145037343" tags="epub download" title="Books / livres">
+<div created="20190131165226977" modified="20190903134705329" tags="epub download" title="Books / livres">
 <pre>! JM Corda
 * ''Utoya - Laurent Obertone''
 * ''Dotcom Secrets - Russell Brunson''
 * ''Petit traité de manipulation à l'usage des honnêtes gens - Robert-Vincent Joule et Jean-Léon Beauvois''
+! inspiration de Dune
+* ''Lesley Blanch - The Sabres of Paradise (1960)''
 ! Jean Ziegler
 * Jean Ziegler - Le Capitalisme expliqué à ma petite-fille (en espérant qu'elle en verra la fin)
 * Victor Hugo - Les misérables
@@ -9870,7 +9874,7 @@ You must not project that you are proving anything or the actions, no matter how
 ```
 </pre>
 </div>
-<div created="20190327143035149" modified="20190618143143455" tags="magic coinmagic" title="coin magic">
+<div created="20190327143035149" modified="20190906124642562" tags="magic coinmagic" title="coin magic">
 <pre>* ''@1'26 -&gt; @1'29 https://www.youtube.com/watch?v=ZQSnMsbcLhI''
 * https://www.youtube.com/watch?v=W1sAkptXwf4
 * https://geniimagazine.com/wiki/index.php?title=Coin_Concealments
@@ -9887,13 +9891,9 @@ You must not project that you are proving anything or the actions, no matter how
 * Goshman Spellbound
 * Sylvester Pitch - Dan Sylvester's Inertia Pass Encyclopedia
 * NOWHERE by Tri Ryuzaki 
-* ReTURNtion by Moritz Mueller
 * Horizon by Ryan Bliss
 * Jay Noblezada - In the Beginning There Were Coins
-* Eric Jones - Metal
 *  Al Schneider Magic (book)
-* volume 1 of David Roth's Expert Coin Magic Made Easy
-* Jay Sankey 'revolutionary coin magic'
 * Marions quick pitch 
 * Marion Boykin Short Pockets / ReViSiTed
 * Marion Boykin : Copper Silver INC, Double Trouble, FlySki, Crimp Change - REDUX
@@ -10582,7 +10582,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20190726084126684" tags="home current" title="Home">
+<div created="20190108105358377" modified="20190906094801627" tags="home current" title="Home">
 <pre>cute https://twitter.com/i_iove_nature
 
 ! current
@@ -10615,6 +10615,8 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * ''Turing indéterminabilité de l'arrêt / Incomplétude de Goedel / caractère fini de la connaissance''
 * Litobox musculation à poids de corps
 * Talend | Norsys
+* listen : Silencer Death Pierce Me
+* listen : Cavetown
 
 ! ''Java dev jeu''
 * https://www.lwjgl.org/
@@ -10705,9 +10707,7 @@ Tyler1987
 </pre>
 </div>
 <div created="20190830154756419" modified="20190830154831001" tags="pedo fiche_lecture" title="Hypnomachie &amp; pedo">
-<pre>
-
-&lt;&lt;&lt;
+<pre>&lt;&lt;&lt;
 Je ne suis pas sûr que ce soit à quiconque d'autre que nous memes de nous protéger.
 Que des commerciaux mettent des femmes nues pour vendre des yoghourts, c'est leur droit le plus strict.
 Que ces yoghourts se vendent, c'est de notre fait...non?
@@ -10930,31 +10930,26 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 * http://adrastia.org/
 * https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos</pre>
 </div>
-<div created="20190322143324937" modified="20190830154108578" tags="magic current" title="magic">
-<pre>disposable email : https://www.throwawaymail.com/en narorerefr@mywrld.top
-
-patreon PigCake : https://www.patreon.com/bePatron?c=714470&amp;rid=1318017
-
-! work: 
-* squeeze
+<div created="20190322143324937" modified="20190906132039616" tags="magic current" title="magic">
+<pre>! work: 
+* squeeze @4'50 - 5'28 https://www.youtube.com/watch?v=gmo5aJNBFEM
 * himber count
 * retention vanish
-* david roth shuttle pass
 * shuttle pass
 * @0'56-0'58 : https://www.youtube.com/watch?v=Q5HnmuQM-Zs
 * @1'11 : https://www.youtube.com/watch?time_continue=76&amp;v=CvZDy-0BzWA
 
-! current
-* sankey retention vanish : https://www.youtube.com/watch?v=FhgF0uM04q4
-* sankey squeeze : @4'50 - 5'28 https://www.youtube.com/watch?v=gmo5aJNBFEM
-
 ! warez
 * ''http://www.magic22.com/''
+* ''https://vminhsang.name.vn/?p=1108''
 * ''http://freemagicdownload1807.blogspot.com/''
+* ''https://www.reddit.com/r/Premium2FreeDownload/''
 * https://www.dailymotion.com/j1811178/videos?sort=visited
 * http://magic-tricks.ru/alltricks/
+* ''torrent search https://www.btdig.com''
 * DarkHAK Fr  https://www.youtube.com/channel/UCHps7VPmYRBBbvkLLAkv41w
 * Magic Christian : https://www.dailymotion.com/magic-christian/videos
+* https://www.reddit.com/r/Premium2FreeDownload/comments/cxj3cv/nitroflare_need_help_for_coin_magic_tutorials/
 
 ! ressources
 * https://www.reddit.com/r/Magic/wiki/index#wiki_coins
@@ -10974,9 +10969,6 @@ patreon PigCake : https://www.patreon.com/bePatron?c=714470&amp;rid=1318017
 * Yuanjie Shuai https://www.instagram.com/yuanjieshuai/
 * Danny Goldsmith https://www.instagram.com/dannygoldsmithmagic/
 
-
-
-
 ! Genii wiki
 * https://geniimagazine.com/wiki/index.php?title=Category:Coins
 * https://geniimagazine.com/wiki/index.php?title=Category:Prop
@@ -10984,9 +10976,6 @@ patreon PigCake : https://www.patreon.com/bePatron?c=714470&amp;rid=1318017
 ! AliExpress
 * ali express magie	https://52magic.aliexpress.com/store/3010004?spm=2114.10010108.0.0.3b156de4UNOMDO
 * Odyssey Calen Morelli	https://www.aliexpress.com/item/Odyssey-by-Calen-Morelli-Gimmick-online-instructions-magic-trick-close-up-street-magic-illusion-fun-professional/32806150519.html
-
-
-
 
 ! Misc
 * UNIkim7 https://www.youtube.com/user/UNIkim7/videos
@@ -11628,8 +11617,25 @@ fnac =&gt; fnac.s.lemoine@xoxy.net 8/18
 * packaging executable : https://gregoryszorc.com/blog/2019/06/24/building-standalone-python-applications-with-pyoxidizer/
 * virtualenv : http://sametmax.com/les-environnement-virtuels-python-virtualenv-et-virtualenvwrapper/</pre>
 </div>
-<div created="20190529145620246" modified="20190823080426180" tags="quotes" title="Quotes, citations">
-<pre>&lt;&lt;&lt;
+<div created="20190529145620246" modified="20190906132000061" tags="quotes" title="Quotes, citations">
+<pre>
+&lt;&lt;&lt;
+Que tout esprit loue le seigneur - incantation d'auto-exorcisme
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Selon Bergson, le rire sanctionne ce qui nous paraît inférieur à ce que nous devrions être. 
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+&quot;l'énergie c'est ce qui quantifie le changement d'état d'un système&quot; Jancovici
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
 optimisme de la volonté, pessimisme de l'intelligence - Antonio Gramsci
 &lt;&lt;&lt;
 
@@ -12183,6 +12189,14 @@ Et je t’ai fait continuer ton chemin.
 ```
 </pre>
 </div>
+<div created="20190906072130070" modified="20190906072816463" tags="" title="thoughts">
+<pre>! Entropie, information, causalité
+Si ''information == !entropie'', et compte-tenu du caractère subjectif de l'entropie/information (car relatif au niveau de connaissance / limitation de l'observateur), peut-on réellement continuer à croire en la conception usuelle en physique de l'univers comme machine à états ? D'un état ''e1 ''à l'instant ''t1'', peut-on encore espérer être capable, même uniquement en expérience de pensée, de déduire le chemin unique des causes ayant mené à cet état ''e1'', de sorte à en déduire l'état ''e0 ''à l'instant ''t0 ''précédant ? -&gt; théorie du chaos inversée : d'un état E d'un système, il est impossible de déduire précisément les successions d'états précédents y ayant amené...?
+
+* conscience, observateur/observation
+* entropie, entropie de Shannon, information
+* théorie du chaos</pre>
+</div>
 <div created="20190130144237309" modified="20190301162949822" tags="" title="Todo">
 <pre>* renouvellement vignette NGE : jusqu'au 31 mars 2019 https://mon.nge-nantes.fr/espace/stationnement
 * inscription école Emma http://www.education.gouv.fr/cid161/l-inscription-a-l-ecole-maternelle.html
@@ -12211,7 +12225,7 @@ Pierre Kropotkine
 
 </pre>
 </div>
-<div created="20190424130007767" modified="20190830154755470" tags="todo torrent download" title="Torrent">
+<div created="20190424130007767" modified="20190906130534577" tags="todo torrent download" title="Torrent">
 <pre>! Misc
 * Erasemybackpain / Back to Life : https://www.erasemybackpain.com/ https://www.youtube.com/watch?v=Fr2dGwCfNaY
 * JM Corda / Sexworkout : https://www.jmcorda.com/fr/  sextao
@@ -12225,6 +12239,7 @@ Pierre Kropotkine
 * La Parole - film danois
 * Grave - FR 2017
 * Knights of Badassdom
+* Le magicien des mensonges Robert de Niro
 
 ! Séries
 * Starwars Rebels
